tests/fixtures/functional_patterns/negative/n04_mutable_vec.rs
fn mutate_in_place(items: &mut Vec<i32>) {
    for i in 0..items.len() {
        items[i] *= 2;
    }
}
